dist/1.0/bin/sample/retrieveUnpackaged/objects/Currency_NBP_Config__c.object
<CustomObject>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Number__c</fullName>
        <label>Table Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Currency NBP Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies NBP Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>